# cosmic-design-demo

./: .gitignore  Cargo.toml  README.md  justfile
debian/: changelog  control  rules
just/: packaging.just  rust.just
src/: buttons.rs  debug.rs  inputs.rs  main.rs  typography.rs
