[package]
name = "cosmic-design-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fraction = "0.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["debug", "wayland", "tokio"]

[dependencies.cosmic-time]
git = "https://github.com/pop-os/cosmic-time"
default-features = false
features = ["libcosmic", "once_cell"]

[patch.crates-io]
smithay-client-toolkit = { git = "https://github.com/pop-os/client-toolkit", branch = "wayland-resize" }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../../" }
# libcosmic = { git = "https://github.com/pop-os/libcosmic?rev=context-drawer", branch = "context-drawer" }
